汇聚支付和置换方案的开发完成

--- a/manifest.json
+++ b/manifest.json
@@ -222,6 +222,7 @@
                 },
                 "/api" : {
                     "target" : "https://app.global3plus.com",
+                    // "target": "https://test.global3plus.com",
                     "changeOrigin" : true,
                     "secure" : false
                 }
